crates/shipper-engine-parallel/src/snapshots/shipper_engine_parallel__tests__snapshot_tests__snapshot_chunk_by_max_concurrent_larger_than_items.snap
---
source: crates/shipper-engine-parallel/src/lib.rs
assertion_line: 3153
expression: chunks
---
[
    [
        "a",
        "b",
    ],
]
