crates/shipper-engine-parallel/src/snapshots/shipper_engine_parallel__tests__snapshot_tests__snapshot_chunk_by_max_concurrent_one.snap
---
source: crates/shipper-engine-parallel/src/lib.rs
assertion_line: 3146
expression: chunks
---
[
    [
        "x",
    ],
    [
        "y",
    ],
    [
        "z",
    ],
]
