crates/shipper-engine-parallel/src/snapshots/shipper_engine_parallel__tests__snapshot_tests__snapshot_execution_plan_diamond.snap
---
source: crates/shipper-engine-parallel/src/lib.rs
expression: layout
---
[
    (
        0,
        [
            "a",
        ],
    ),
    (
        1,
        [
            "b",
            "c",
        ],
    ),
    (
        2,
        [
            "d",
        ],
    ),
]
