crates/shipper-engine-parallel/src/snapshots/shipper_engine_parallel__tests__snapshot_tests__snapshot_execution_plan_independent_forest.snap
---
source: crates/shipper-engine-parallel/src/lib.rs
expression: layout
---
[
    (
        0,
        [
            "utils-a",
            "utils-b",
            "utils-c",
            "utils-d",
        ],
    ),
]
