crates/shipper-engine-parallel/src/snapshots/shipper_engine_parallel__tests__snapshot_tests__snapshot_execution_plan_linear_chain.snap
---
source: crates/shipper-engine-parallel/src/lib.rs
expression: layout
---
[
    (
        0,
        [
            "a",
        ],
    ),
    (
        1,
        [
            "b",
        ],
    ),
    (
        2,
        [
            "c",
        ],
    ),
]
