crates/shipper-engine-parallel/src/snapshots/shipper_engine_parallel__tests__snapshot_tests__snapshot_execution_plan_wide_fan_out.snap
---
source: crates/shipper-engine-parallel/src/lib.rs
expression: layout
---
[
    (
        0,
        [
            "core",
        ],
    ),
    (
        1,
        [
            "cli",
            "web",
            "api",
            "worker",
            "bench",
        ],
    ),
]
