crates/shipper-engine-parallel/src/snapshots/shipper_engine_parallel__tests__snapshot_tests__snapshot_parallel_config_default.snap
---
source: crates/shipper-engine-parallel/src/lib.rs
expression: config
---
ParallelConfig {
    enabled: false,
    max_concurrent: 4,
    per_package_timeout: 1800s,
}
